package sample;

interface ILoader {
    void load();
}
