@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.DodawanieFakturyController {
        - arrayListKlienci : ArrayList<Klient>
        - listViewKlienci : ListView<String>
        - nazwaKlienta : String
        - scene : Scene
        + DodawanieFakturyController()
        + getScene()
        + getStage()
    }
  }

    namespace sample {
      class sample.ObliczCeneUslugi {
          {static} + getKwotaBrutto()
          {static} + getKwotaNetto()
          {static} + getKwotaVAT()
      }
    }

  

  namespace sample {
    class sample.DodawanieKlientaController {
        - scene : Scene
        + DodawanieKlientaController()
        + getScene()
    }
  }
  

  namespace sample {
    class sample.DodawanieUslugiController {
        - parent : Parent
        - scene : Scene
        - stage : Stage
        + DodawanieUslugiController()
        + getScene()
    }
  }
  

  namespace sample {
    class sample.Faktura {
        + uslugi : ArrayList<Usluga>
        + Faktura()
        + Faktura()
        + Faktura()
        + clear()
        + dodajUsluge()
        + ustawKlienta()
        + zwrocKlienta()
        + zwrocUslugi()
    }
  }
  

  namespace sample {
    class sample.FakturyStorage {
        - faktury : ArrayList<Faktura>
        + FakturyStorage()
        + dodajFakture()
        + ustawFaktury()
        + znajdzFaktury()
        + zwrocFaktury()
    }
  }
  

  namespace sample {
    interface sample.ILoader {
        {abstract} + load()
    }
  }
  

  namespace sample {
    class sample.Klient {
        - adres : String
        - nazwa : String
        - nip : String
        + Klient()
        + getAdres()
        + getNazwa()
        + getNip()
    }
  }
  

  namespace sample {
    class sample.KlientStorage {
        - klienci : ArrayList<Klient>
        + KlientStorage()
        + dodajKlienta()
        + ustawKlientow()
        + znajdzKlientaNIP()
        + znajdzKlientaNazwa()
        + zwrocKlientow()
    }
  }
  

  namespace sample {
    class sample.MainController {
        - scene : Scene
        - stage : Stage
        + getStage()
        {static} + main()
        + pokazMnie()
        + start()
    }
  }
  

  namespace sample {
    class sample.MockingLoader {
        + load()
    }
  }
  

  namespace sample {
    class sample.ObliczCeneFaktury {
        + ObliczCeneFaktury()
        + policzCene()
    }
  }
  

  namespace sample {
    class sample.ResourceManager {
        {static} - INSTANCE : ResourceManager
        + getFakturyStorage()
        {static} + getInstance()
        + getKlientStorage()
        + load()
        - ResourceManager()
    }
  }
  

  namespace sample {
    class sample.Usluga {
        - cenaUslugi : Double
        - iloscUslug : Integer
        - nazwaUslugi : String
        - procentPodatku : Double
        + Usluga()
        + getCenaUslugi()
        + getIloscUslug()
        + getNazwaUslugi()
        + getProcentPodatku()
        + setCenaUslugi()
        + setIloscUslug()
        + setNazwaUslugi()
        + setProcentPodatku()
    }
  }
  

  namespace sample {
    class sample.WyswietlanieFakturyController {
        - arrayListKlienci : ArrayList<Klient>
        - listViewKlienci : ListView<String>
        - listViewNumeryFaktur : ListView<Integer>
        - nazwaKlienta : String
        - scene : Scene
        - tableViewFaktury : TableView<Usluga>
        - wybraneFaktury : ArrayList<Faktura>
        + WyswietlanieFakturyController()
        + getScene()
        - odswiezListe()
    }
  }
  

  sample.DodawanieFakturyController o-- sample.Faktura : tworzonaFaktura
  sample.Faktura o-- sample.Usluga : usluga
  sample.Faktura o-- sample.Klient : klient
  sample.MainController -up-|> javafx.application.Application
  sample.ResourceManager o-- sample.ILoader : loader
  sample.MockingLoader .up.|> sample.ILoader
  sample.ResourceManager o-- sample.FakturyStorage : fakturyStorage
  sample.ResourceManager o-- sample.KlientStorage : klientStorage
  sample.ObliczCeneFaktury o-- sample.Faktura : tworzonaFaktura
  sample.DodawanieKlientaController o-- sample.Klient : klient
  sample.ObliczCeneFaktury o-- sample.ObliczCeneUslugi : obliczCeneUslugi
  sample.DodawanieUslugiController o-- sample.Usluga : usluga
  sample.ObliczCeneUslugi o-- sample.Usluga : usluga
  sample.WyswietlanieFakturyController o-- sample.ObliczCeneFaktury : obliczCeneFaktury


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
